Fix CORS to use environment variables